# 123-dashboard

./: .gitignore  README.md  start.ps1
.github/workflows/: build-tauri.yml
backend/: main.py  snapshot.py  uvicorn-app.spec
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: BatchProgress.tsx  Codex2apiHealth.tsx  DeadList.tsx  PhonePool.tsx
frontend/src/hooks/: useSSE.ts
