[package]
name = "dashboard-tauri"
version = "1.0.0"
description = "ChatGPT Plus Dashboard - Tauri desktop wrapper"
authors = ["plus_paypal_auto"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "dashboard_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dashboard-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
